--- a/pages/partsAcessories/partsAccessories.html
+++ b/pages/partsAcessories/partsAccessories.html
@@ -32,23 +32,20 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/price/price.html">Dock Packages and Pricing</a>
+                    <a class="nav-link" href="../../pages/price/price.html">Dock Packages and Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Swim Floats</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/contact/contact.html">Contact Us</a>
+                    <a class="nav-link" href="../../pages/contact/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/pages/sureStep/sureStep.html">Other Products</a>
-                        <a class="dropdown-item" href="/pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="/pages/warranty/warranty.html">Warranty</a>
-                        <a class="dropdown-item" href="/pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
+                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Other Products</a>
+                        <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
+                        <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
             </ul>
