--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -1,7 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,8 @@
     <link rel="icon" href="../../img/EZIcon.png">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/sureStep.css">
-    <script src="js/sureStep.js"></script>
+    <link rel="stylesheet" href="/pages/sureStep/css/sureStep.css">
+
 </head>
 
 <body>
@@ -53,108 +53,9 @@
     <!--Main Content-->
     <div id="mainContent">
 
-        <div id="headerContent" class="editorWrap">
-            <div id="headerZoneElement" class="editable rte flexContent" rel="itemGuid.sit.hc.001">
-                <h1 style="text-align: center;" data-mce-style="text-align: center;"><span style="color: #ff0000; line-height: normal; font-family: 'arial black', 'avant garde'; font-size: 36pt;" data-mce-style="color: #ff0000; line-height: normal; font-family: 'arial black', 'avant garde'; font-size: 36pt;">E-Z Docking Solutions</span></h1>
-                <p> </p>
-                <p> </p>
-                <p> </p>
-                <p><span style="color: rgb(0, 255, 0); line-height: normal; font-size: 36pt;"><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></span></p>
-                <p><br /></p>
-                <p><br /></p>
-                <p><span style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;" data-mce-style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;">(603) 942-7355</span></p>
-            </div>
-        </div>
+
+
     </div>
-    <div>
-        <div class="contactInfoContainer">
-            <p class="vcard"><span><span class="organization-name">E-Z Docking Solutions LLC</span></span><br>
-
-                <span class="adr"><span class="street-address">1548 First NH Turnpike</span><br>
-                    <span class="locality">Northwood,</span>
-                    <span class="region">NH</span> <span class="postal-code">03261</span></span><span class="phoneNumbers"><br>
-                    <span class="tel"><span class="type">ph: </span>(603) 942-7355</span></span><br><span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
-            <div class="social-contact-info"><span class="social-contact-info-wrap"><a href="https://www.facebook.com/E-Z-Docking-Solutions-110275449034725/" target="_blank"><img src="https://s.yimg.com/ln/assets/i/spacer.gif" width="16" height="16" alt="Facebook" class="small-icon-sprite ico-facebook"></a></span></div>
-
-        </div>
-    </div>
-
-    <div id="wrapper" class="navpos_east">
-        <div xmlns="" id="navigation" class="tglsty_arrow sub_dynamic">
-            <ul id="mainNav" role="navigation">
-                <li class="mainNav "><a href="/home">Home</a></li>
-                <li class="mainNav "><a href="/dock_packages_and_pricing">Dock Packages and Pricing</a></li>
-                <li class="mainNav "><a href="/swim_floats">Swim Floats</a></li>
-                <li class="mainNav "><a href="/other_products">Other Products</a></li>
-                <li class="mainNav active"><a href="/sure-step">Sure-Step</a></li>
-                <li class="mainNav "><a href="/dock_parts_and_accessories">Dock Parts and Accessories</a></li>
-                <li class="mainNav "><a href="/warranty">Warranty</a></li>
-                <li class="mainNav "><a href="/photo_gallery">Photo Gallery</a></li>
-                <li class="mainNav "><a href="/testimonials_and_feedback">Testimonials and Feedback</a></li>
-                <li class="mainNav "><a href="/contact_us">Contact Us</a></li>
-            </ul>
-        </div>
-        <div xmlns="" id="bd">
-            <div id="pageName">
-                <div id="pageNameContent" class="editorWrap">
-                    <div id="pageNameZoneContent" class="editable rte flexContent" rel="itemGuid.pgName.pageGuid.57a4e9e281f565.69153140">
-                        <h2 style="text-align: center;">Sure-Step</h2>
-                    </div>
-                </div>
-            </div>
-            <div id="zWrap">
-                <div id="zA">
-                    <div id="zA-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                        <div class="modWrap">
-                            <p style="text-align: center;" data-mce-style="text-align: center;"><img class="yssDKImg yssImg yssImgE yssAstImg_itemGuid.57a4ea2436bcd4.41663909_960X1280 yssImg_allowZoomIn yssDKImg_alignCenter" style="display: block; margin-left: auto; margin-right: auto; text-align: center;" src="/yahoo_site_admin/assets/images/0421141436.217123417_std.jpg" alt="" width="518" height="690" border="0" data-mce-src="/yahoo_site_admin/assets/images/0421141436.217123417_std.jpg" data-mce-style="display: block; margin-left: auto; margin-right: auto; text-align: center;" /><span style="line-height: normal; font-size: 24pt;" data-mce-style="line-height: normal; font-size: 24pt;"><strong>AVAILABLE IN GREY OR SAND</strong></span></p>
-                            <p style="text-align: center;" data-mce-style="text-align: center;">Sure-step is one of the best decking options available today! It is lightweight, durable, wave resistant, highly UV resistant so it does not get hot, slip resistant, environmentally friendly, and barefoot friendly. It is made of 100% Virgin Polypropylene. It is very lightweight making for easy installation and removal, yet it is very rugged and rated for 350 pounds per square foot.</p>
-                            <p style="text-align: center;" data-mce-style="text-align: center;"><a type="1" href="http://www.jimdiinc.com/products/sure_step_docks_and_walkways/default.html" data-mce-href="http://www.jimdiinc.com/products/sure_step_docks_and_walkways/default.html"><img src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" alt="" width="217" height="208" data-mce-src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" /></a></p>
-                            <p style="text-align: center;" data-mce-style="text-align: center;">﻿﻿</p>
-                            <p> </p>
-                        </div>
-                    </div>
-                </div>
-                <div id="zB">
-                    <div id="zB-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                        <div class="modWrap">
-                            <p> </p>
-                            <p> </p>
-                            <p> </p>
-                        </div>
-                    </div>
-                </div>
-                <div id="zC">
-                    <div id="zC-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                        <div class="modWrap">
-                            <p> </p>
-                            <p> </p>
-                            <p> </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div xmlns="" id="ft">
-        <div id="fWrapper">
-            <div id="fContent">
-                <div id="footerContent" class="editorWrap">
-                    <div id="footerZoneElement" class="editable rte flexContent" rel="itemGuid.sit.fc.001">
-                        <p>Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
-                        <p><a target="_top" href="https://www.luminate.com/webhosting/">Web Hosting by Aabaco</a></p>
-                    </div>
-                </div>
-            </div>
-            <div id="fMisc">
-                <div class="contactInfoContainer" style="width:auto;height:auto">
-                    <p class="vcard"><span class="fn org"><span class="organization-name">E-Z Docking Solutions LLC</span></span><br><span class="adr"><span class="street-address">1548 First NH Turnpike</span><br><span class="locality">Northwood</span><span class="separator">, </span><span class="region">NH</span> <span class="postal-code">03261</span></span><span class="phoneNumbers"><br><span class="tel"><span class="type">ph: </span>(603) 942-7355</span></span><br><span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
-                    <div class="social-contact-info"><span class="social-contact-info-wrap"><a href="https://www.facebook.com/E-Z-Docking-Solutions-110275449034725/" target="_blank"><img src="https://s.yimg.com/ln/assets/i/spacer.gif" width="16" height="16" alt="Facebook" class="small-icon-sprite ico-facebook"></a></span></div>
-                    </p>
-                </div>
-            </div>
-            <div id="fBadges"></div>
-        </div>
-
 
 </body>
 
