--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/pages/sureStep/css/sureStep.css">
+    <script src="/pages/sureStep/js/sureStep.js"></script>
 
 </head>
 
@@ -18,7 +19,7 @@
 
     <!--NavBar-->
     <nav class="navbar fixed-top navbar-expand-lg justify-content-center">
-        <a class="navbar-brand" href="/index.html"> <img src="./img/EZIcon.png" alt="EZ Icon"></a>
+        <a class="navbar-brand" href="#"><img src="img/EZIcon.png" alt="EZ Icon"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
