--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -56,8 +56,7 @@
 
         <div id="headerContent">
             <div>
-                <h1><span>E-Z Docking Solutions</span></h1>
-                <p><span><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></span></p>
+                <p><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></p>
 
                 <p><span>(603) 942-7355</span></p>
             </div>
@@ -147,17 +146,35 @@
                         </div>
                     </div>
                 </div>
-                <div id="fMisc">
-                    <div class="contactInfoContainer" style="width:auto;height:auto">
-                        <p class="vcard"><span class="fn org"><span class="organization-name">E-Z Docking Solutions LLC</span></span><br><span class="adr"><span class="street-address">1548 First NH Turnpike</span><br><span class="locality">Northwood</span><span class="separator">, </span><span class="region">NH</span> <span class="postal-code">03261</span></span><span class="phoneNumbers"><br><span class="tel"><span class="type">ph: </span>(603) 942-7355</span></span><br><span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
-                        <div class="social-contact-info"><span class="social-contact-info-wrap"><a href="https://www.facebook.com/E-Z-Docking-Solutions-110275449034725/" target="_blank"><img src="https://s.yimg.com/ln/assets/i/spacer.gif" width="16" height="16" alt="Facebook" class="small-icon-sprite ico-facebook"></a></span></div>
-                        </p>
+                <!--Footer-->
+                <div id="footer">
+                    <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
+                        <div class="card-body">
+                            <h5 class="card-title">Copyright</h5>
+                            <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
+                            <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 20rem; border: none; background-color: rgb(235, 235, 235)">
+                        <div class="card-body">
+                            <h5 class="card-title">Contact</h5>
+                            <p class="card-text">ph: (603) 942-7355</p>
+                            <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
+                        <div class="card-body">
+                            <h5 class="card-title">Address</h5>
+                            <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
+                        </div>
                     </div>
                 </div>
-                <div id="fBadges"></div>
-            </div>
-        </div>
 
+
+                <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            </div>
 </body>
 
 </html>
